@@ -364,8 +364,10 @@
 # syslog uses the userspace syslog facility which usually ends up 
 # in /var/log/messages or similar.
 # topic logs to the broker topic '$SYS/broker/log/<severity>', 
-# where severity is one of D, E, W, N, I which are debug, error, 
-# warning, notice and information.
+# where severity is one of D, E, W, N, I, M which are debug, error, 
+# warning, notice, information and message. Message type severity is used by
+# the subscribe/unsubscribe log_types and publishes log messages to
+# $SYS/broker/log/M/susbcribe or $SYS/broker/log/M/unsubscribe.
 # Note that if the broker is running as a Windows service it will default to
 # "log_dest none" and neither stdout nor stderr logging is available.
 # Use "log_dest none" if you wish to disable logging.
@@ -374,7 +376,7 @@
 # Types of messages to log. Use multiple log_type lines for logging
 # multiple types of messages.
 # Possible types are: debug, error, warning, notice, information, 
-# none, all.
+# none, subscribe, unsubscribe, all.
 # Note that debug type messages are for decoding the incoming/outgoing
 # network packets. They are not logged in "topics".
 #log_type error
