@@ -5,6 +5,7 @@ Broker:
 - Replace O(n) username lookup on CONNECT with a roughly O(1) hashtable version.
 - Add support for round_robin bridge option.
 - It is now possible to disable $SYS at compile time.
+- Add support for logging SUBSCRIBE/UNSUBSCRIBE events.
 - Auth plugin ACL check function now passes the client id as well as username
   and password.
 - The queue_qos0_messages option wasn't working correctly, this has now been
